--- a/app/view/index.ejs
+++ b/app/view/index.ejs
@@ -43,10 +43,10 @@
                                 <ul class="navbar-nav">
                                     <% if(validacao.length > 0) { %>
                                         <li class="nav-item active">
-                                            <a class="nav-link" href="#">Cadastrar Estúdio</a>
+                                            <a class="nav-link" href="cadastro-estudio">Cadastrar Estúdio</a>
                                         </li>
                                         <li class="nav-item active">
-                                            <a class="nav-link" href="#">Cadastrar Sala</a>
+                                            <a class="nav-link" href="cadastro-sala">Cadastrar Sala</a>
                                         </li>
                                         <li class="nav-item">
                                             <a class="nav-link" href="#">Agendar</a>
