finalizando cadastro de estudio

--- a/app/view/cadastrarEstudio.ejs
+++ b/app/view/cadastrarEstudio.ejs
@@ -91,7 +91,7 @@
                         <!-- DESCRICAO E CHECKBOX -->
                         <div class="booking-checkbox_wrap">	
                             <div class="row d-flex">
-                                <form>
+                                <form method="POST" action="/cadastro-estudio">
                                     <div class="form-group">
                                         <label for="exampleInputEmail1">Nome do Estúdio</label>
                                         <input type="text" class="form-control" id="nomeEstudio" name='nomeEstudio' placeholder="Nome do Estúdio">
