--- a/app/view/detalheSala.ejs
+++ b/app/view/detalheSala.ejs
@@ -161,7 +161,7 @@
 					<!-- DESCROCAO E CHECKBOX -->
                     <div class="booking-checkbox_wrap">	
 						<div>	
-							<p style='font-size:25px; font-weigth:bold'>Equipamentos:</p>
+							<p style='font-size:25px; font-weight:bold'>Equipamentos:</p>
 							<!-- gerado pelo banco de dados -->
 							<ul class="list-group">
 							  <li class="list-group-item">Bateria Mapex N80</li>
@@ -177,7 +177,7 @@
 						</div>
 						</br>
 						<hr>
-						<p style='font-size:25px; font-weigth:bold'>Horários Disponíveis:</p>
+						<p style='font-size:25px; font-weight:bold'>Horários Disponíveis:</p>
 						<!-- Ao selecionar a data, dispara o evento que gera as checkboxes de horário, de acordo com os horários disponiveis -->
 						<div class="form-check">
 						  <label class="form-check-label">
