insert de estudio dando erro ER_PARSE_ERROR, amanhã arrumo.

--- a/app/view/cadastrarEstudio.ejs
+++ b/app/view/cadastrarEstudio.ejs
@@ -96,30 +96,37 @@
                                         <label for="exampleInputEmail1">Nome do Estúdio</label>
                                         <input type="text" class="form-control" id="nomeEstudio" name='nomeEstudio' placeholder="Nome do Estúdio">
                                     </div>
+<!-- nomeEstudio VARCHAR(100) NOT NULL,
+descricao LONGTEXT NOT NULL,
+estado VARCHAR(50) NOT NULL,
+cidade VARCHAR(50) NOT NULL,
+bairro VARCHAR(50) NOT NULL,
+rua VARCHAR(100) NOT NULL,
+cep VARCHAR(20) NOT NULL, -->
                                     <div class="form-group">
                                         <label for="descEstudio">Descrição</label>
-                                        <textarea class="form-control" rows='5' id="descEstudio" name='descEstudio' placeholder="Introduza seu estúdio"></textarea>
+                                        <textarea class="form-control" rows='5' id="descEstudio" name='descricao' placeholder="Introduza seu estúdio"></textarea>
                                     </div>
                                     <hr>
                                     <div class="form-group">
                                         <label for="estadoEstudio">Estado</label>
-                                        <input type="text" class="form-control" id="estadoEstudio" name='estadoEstudio' placeholder="Estado">
+                                        <input type="text" class="form-control" id="estadoEstudio" name='estado' placeholder="Estado">
                                     </div>
                                     <div class="form-group">
                                         <label for="cidadeEstudio">Cidade</label>
-                                        <input type="text" class="form-control" id="cidadeEstudio" name='cidadeEstudio' placeholder="Cidade">
+                                        <input type="text" class="form-control" id="cidadeEstudio" name='cidade' placeholder="Cidade">
                                     </div>
                                     <div class="form-group">
                                         <label for="bairroEstudio">Bairro</label>
-                                        <input type="text" class="form-control" id="bairroEstudio" name='bairroEstudio' placeholder="Bairro">
+                                        <input type="text" class="form-control" id="bairroEstudio" name='bairro' placeholder="Bairro">
                                     </div>
                                     <div class="form-group">
                                         <label for="ruaEstudio">Rua</label>
-                                        <input type="text" class="form-control" id="ruaEstudio" name='ruaEstudio' placeholder="Rua">
+                                        <input type="text" class="form-control" id="ruaEstudio" name='rua' placeholder="Rua">
                                     </div>
                                     <div class="form-group">
                                         <label for="CEPEstudio">CEP</label>
-                                        <input type="text" class="form-control" id="CEPEstudio" name='CEPEstudio' placeholder="CEP">
+                                        <input type="text" class="form-control" id="CEPEstudio" name='cep' placeholder="CEP">
                                     </div>
                                 
                                     <hr>
