--- a/app/view/cadastrarEstudio.ejs
+++ b/app/view/cadastrarEstudio.ejs
@@ -94,39 +94,32 @@
                                 <form method="POST" action="/cadastro-estudio">
                                     <div class="form-group">
                                         <label for="exampleInputEmail1">Nome do Estúdio</label>
-                                        <input type="text" class="form-control" id="nomeEstudio" name='nomeEstudio' placeholder="Nome do Estúdio">
+                                        <input type="text" class="form-control" id="nomeEstudio" name='nomeEstudio' placeholder="Nome do Estúdio" required>
                                     </div>
-<!-- nomeEstudio VARCHAR(100) NOT NULL,
-descricao LONGTEXT NOT NULL,
-estado VARCHAR(50) NOT NULL,
-cidade VARCHAR(50) NOT NULL,
-bairro VARCHAR(50) NOT NULL,
-rua VARCHAR(100) NOT NULL,
-cep VARCHAR(20) NOT NULL, -->
                                     <div class="form-group">
                                         <label for="descEstudio">Descrição</label>
-                                        <textarea class="form-control" rows='5' id="descEstudio" name='descricao' placeholder="Introduza seu estúdio"></textarea>
+                                        <textarea class="form-control" rows='5' id="descEstudio" name='descricao' placeholder="Introduza seu estúdio" required></textarea>
                                     </div>
                                     <hr>
                                     <div class="form-group">
                                         <label for="estadoEstudio">Estado</label>
-                                        <input type="text" class="form-control" id="estadoEstudio" name='estado' placeholder="Estado">
+                                        <input type="text" class="form-control" id="estadoEstudio" name='estado' placeholder="Estado" required>
                                     </div>
                                     <div class="form-group">
                                         <label for="cidadeEstudio">Cidade</label>
-                                        <input type="text" class="form-control" id="cidadeEstudio" name='cidade' placeholder="Cidade">
+                                        <input type="text" class="form-control" id="cidadeEstudio" name='cidade' placeholder="Cidade" required>
                                     </div>
                                     <div class="form-group">
                                         <label for="bairroEstudio">Bairro</label>
-                                        <input type="text" class="form-control" id="bairroEstudio" name='bairro' placeholder="Bairro">
+                                        <input type="text" class="form-control" id="bairroEstudio" name='bairro' placeholder="Bairro" required>
                                     </div>
                                     <div class="form-group">
                                         <label for="ruaEstudio">Rua</label>
-                                        <input type="text" class="form-control" id="ruaEstudio" name='rua' placeholder="Rua">
+                                        <input type="text" class="form-control" id="ruaEstudio" name='rua' placeholder="Rua" required>
                                     </div>
                                     <div class="form-group">
                                         <label for="CEPEstudio">CEP</label>
-                                        <input type="text" class="form-control" id="CEPEstudio" name='cep' placeholder="CEP">
+                                        <input type="text" class="form-control" id="CEPEstudio" name='cep' placeholder="CEP" required>
                                     </div>
                                 
                                     <hr>
