--- a/app/view/cadastrarEstudio.ejs
+++ b/app/view/cadastrarEstudio.ejs
@@ -127,37 +127,37 @@
                                     <label>Dias de funcionamento:</label><br />
                                     <div class="form-check form-check-inline">
                                         <label class="form-check-label">
-                                            <input class="form-check-input" type="checkbox" id="inlineCheckbox7" value="1" checked> Domingo
+                                            <input class="form-check-input" type="checkbox" name="diaSemana" id="inlineCheckbox7" value="1" checked> Domingo
                                         </label>
                                     </div>
                                     <div class="form-check form-check-inline">
                                         <label class="form-check-label">
-                                            <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="2" checked> Segunda
+                                            <input class="form-check-input" type="checkbox" name="diaSemana" id="inlineCheckbox1" value="2" checked> Segunda
                                         </label>
                                     </div>
                                     <div class="form-check form-check-inline">
                                         <label class="form-check-label">
-                                            <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="3" checked> Terça
+                                            <input class="form-check-input" type="checkbox" name="diaSemana" id="inlineCheckbox2" value="3" checked> Terça
                                         </label>
                                     </div>
                                     <div class="form-check form-check-inline">
                                         <label class="form-check-label">
-                                            <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="4" checked> Quarta
+                                            <input class="form-check-input" type="checkbox" name="diaSemana" id="inlineCheckbox3" value="4" checked> Quarta
                                         </label>
                                     </div>
                                     <div class="form-check form-check-inline">
                                         <label class="form-check-label">
-                                            <input class="form-check-input" type="checkbox" id="inlineCheckbox4" value="5" checked> Quinta
+                                            <input class="form-check-input" type="checkbox" name="diaSemana" id="inlineCheckbox4" value="5" checked> Quinta
                                         </label>
                                     </div>
                                     <div class="form-check form-check-inline">
                                         <label class="form-check-label">
-                                            <input class="form-check-input" type="checkbox" id="inlineCheckbox5" value="6" checked> Sexta
+                                            <input class="form-check-input" type="checkbox" name="diaSemana" id="inlineCheckbox5" value="6" checked> Sexta
                                         </label>
                                     </div>
                                     <div class="form-check form-check-inline">
                                         <label class="form-check-label">
-                                            <input class="form-check-input" type="checkbox" id="inlineCheckbox6" value="7" checked> Sabado
+                                            <input class="form-check-input" type="checkbox" name="diaSemana" id="inlineCheckbox6" value="7" checked> Sabado
                                         </label>
                                     </div>
                                     </br></br>
