--- a/app/view/index.ejs
+++ b/app/view/index.ejs
@@ -84,10 +84,10 @@
                         </div>
                         <div class="row d-flex justify-content-center">
                             <div class="col-md-10">
-                                <form class="form-wrap mt-4">
+                                <form class="form-wrap mt-4" type='get' action='/listar-estudios'>
                                     <div class="btn-group" role="group" aria-label="Basic example">
-                                        <input type="text" placeholder="O que você procura?" class="btn-group1">
-                                        <input type="text" placeholder="Curitiba" class="btn-group2">
+                                        <input type="text" placeholder="O que você procura?" name='nome' class="btn-group1">
+                                        <input type="text" placeholder="Onde?" name='local' class="btn-group2">
                                         <button type="submit" class="btn-form"><span class="icon-magnifier search-icon"></span>BUSCAR<i class="pe-7s-angle-right"></i></button>
                                     </div>
                                 </form>
