--- a/app/view/listarEstudios.ejs
+++ b/app/view/listarEstudios.ejs
@@ -65,6 +65,8 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-7 responsive-wrap">
+				<!--
+				<div id='container'>
                     <div class="row detail-filter-wrap">
                         <div class="col-md-4 featured-responsive">
                             <div class="detail-filter-text">
@@ -152,34 +154,42 @@
                 <span class="custom-control-indicator"></span>
                 <span class="custom-control-description">Pets Friendly</span>
               </label>
-
+			
                         </div>
                     </div>
+					</div>
+					-->
+				
                     <div class="row light-bg detail-options-wrap">
+					<% for(var i = 0; i < estudios.length; i++) { %>
                         <div class="col-sm-6 col-lg-12 col-xl-6 featured-responsive">
                             <div class="featured-place-wrap">
-                                <a href="detail.html">
-                                    <img src="images/featured1.jpg" class="img-fluid" alt="#">
+                                <a href="/detalhe-estudio?estudio=<%=estudios[i].id_estudio%>">
+                                    <!--
+									<img src="images/featured1.jpg" class="img-fluid" alt="#">
                                     <span class="featured-rating-orange ">6.5</span>
+									-->
                                     <div class="featured-title-box">
-                                        <h6>Burger &amp; Lobster</h6>
-                                        <p>Restaurant </p> <span>• </span>
+                                        <h6><%= estudios[i].nomeEstudio %></h6>
+                                        <p>Estúdio </p> <!--<span>• </span>
                                         <p>3 Reviews</p> <span> • </span>
                                         <p><span>$$$</span>$$</p>
+										-->
                                         <ul>
                                             <li><span class="icon-location-pin"></span>
-                                                <p>1301 Avenue, Brooklyn, NY 11230</p>
+                                                <p><%= estudios[i].rua%>, <%= estudios[i].bairro%> - <%= estudios[i].cidade%> - <%= estudios[i].estado%></p>
                                             </li>
                                             <li><span class="icon-screen-smartphone"></span>
                                                 <p>+44 20 7336 8898</p>
                                             </li>
+											<!--
                                             <li><span class="icon-link"></span>
                                                 <p>https://burgerandlobster.com</p>
                                             </li>
-
+											-->
                                         </ul>
                                         <div class="bottom-icons">
-                                            <div class="closed-now">CLOSED NOW</div>
+                                            <div class="open-now">OPEN NOW</div>
                                             <span class="ti-heart"></span>
                                             <span class="ti-bookmark"></span>
                                         </div>
@@ -187,6 +197,8 @@
                                 </a>
                             </div>
                         </div>
+						<% } %>
+						<!--
                         <div class="col-sm-6 col-lg-12 col-xl-6 featured-responsive">
                             <div class="featured-place-wrap">
                                 <a href="detail.html">
@@ -281,13 +293,14 @@
                                 </a>
                             </div>
                         </div>
+						-->
                     </div>
                 </div>
                 <div class="col-md-5 responsive-wrap map-wrap">
                     <div class="map-fix">
                         <!-- data-toggle="affix" -->
                         <!-- Google map will appear here! Edit the Latitude, Longitude and Zoom Level below using data-attr-*  -->
-                        <div id="map" data-lat="40.674" data-lon="-73.945" data-zoom="14"></div>
+                        <div id="map" data-lat="-25.4513297" data-lon="-49.2509087" data-zoom="14"></div>
                     </div>
                 </div>
             </div>
